# Data-Challenge-Carrefour

./: README.md
data-challenge/: docker-compose.yml  main.py  pyproject.toml
data-challenge/src/: connection.py  responses.py  secrets.py  services.py
exploratory-analysis/: AVISO - LEIA ANTES DE ABRIR.txt  AVISO.txt  trends.csv  trends_topic.mstr
